# cpp_std_for_each_speed_test

./: .gitignore  CMakeLists.txt  README.md  std_for_each_speed_test.cpp
src/: google.cpp  native.cpp  std_for_each_speed_test.h
